--- a/app/src/main/res/layout-large/detailedscoreview.xml
+++ b/app/src/main/res/layout-large/detailedscoreview.xml
@@ -11,7 +11,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tbl_details">
+            android:id="@+id/tbl_score_details">
 
             <TableRow
                 android:layout_width="fill_parent"
