--- a/app/src/main/res/layout/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout/activity_assesmenttestitem.xml
@@ -5,88 +5,117 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_atestid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="testid"
-            android:layout_gravity="center_vertical"
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:textSize="16dp"/>
-
+        android:background="#FFFFFF"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        card:cardCornerRadius="5dp"
+        card:cardElevation="5dp"
+        card:contentPadding="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_start"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:src="@drawable/play"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Play" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_review"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:src="@drawable/review"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Review" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:weightSum="2">
-
-            <TextView
-                android:id="@+id/tv_ateststatus"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="teststatus"
-                android:layout_gravity="center"
-                android:textColor="#000000"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_weight="1"
-                android:textSize="12dp"/>
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/cb_atestselection"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TestId"
+                    android:textSize="14sp"
+                    android:layout_weight="1"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/tv_atestid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="testid"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/ic_file_download_black_36dp" />
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_start"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/play"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Play" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_review"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/review"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Review" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tv_ateststatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="teststatus"
+                    android:layout_gravity="center"
+                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:textSize="12dp"/>
+
+                <ImageView
+                    android:id="@+id/cb_atestselection"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_file_download_black_36dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
