--- a/app/src/main/res/layout-xlarge/activity_db.xml
+++ b/app/src/main/res/layout-xlarge/activity_db.xml
@@ -6,19 +6,45 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="com.digywood.tms.DbActivity">
+    tools:context="com.digywood.tms.DashBoardNavActivity">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/dash_tablayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabTextColor="@color/white"
-        app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabIndicatorColor="@color/colorPrimary"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:elevation="6dp"
-        android:background="@drawable/tablayout_bg"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_weight="1.5">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/dash_tablayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:tabTextColor="@color/white"
+                app:tabSelectedTextColor="@color/colorPrimary"
+                app:tabIndicatorColor="@color/colorPrimary"
+                android:elevation="6dp"
+                android:background="@drawable/tablayout_bg"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_mylearnings"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="3dp"
+            android:layout_weight="8.5"
+            android:text="My Courses"
+            android:textStyle="bold"
+            android:background="@drawable/btn_details_bg"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/dash_viewpager"
