--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -40,7 +40,7 @@
             android:layout_height="30dp"
             android:layout_margin="2dp"
             android:layout_weight="8.5"
-            android:text="My Learning"
+            android:text="My Courses"
             android:textStyle="bold"
             android:background="@drawable/btn_details_bg"
             android:textColor="#FFFFFF"
