--- a/app/src/main/res/menu/activity_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_dash_board_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Enrollments" />
         <item
+            android:id="@+id/nav_reqenrolls"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Requested Enrolls" />
+        <item
             android:id="@+id/nav_courses"
             android:icon="@drawable/ic_menu_manage"
             android:title="Courses" />
@@ -28,6 +32,10 @@
                 android:id="@+id/nav_info"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Info" />
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Logout" />
         </menu>
     </item>
 
