--- a/app/src/main/res/layout-large/activity_enrollreqitem.xml
+++ b/app/src/main/res/layout-large/activity_enrollreqitem.xml
@@ -131,6 +131,19 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_indicator"
+                        android:layout_width="5dp"
+                        android:layout_height="5dp"/>
+
+                </LinearLayout>
+
             </LinearLayout>
 
             <View
