--- a/app/src/main/res/layout-large/activity_enrollreqitem.xml
+++ b/app/src/main/res/layout-large/activity_enrollreqitem.xml
@@ -19,19 +19,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:weightSum="10"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1.9">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1.9">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1.9">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -109,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1.9">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -134,13 +134,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_weight="2.4">
 
                     <TextView
                         android:id="@+id/tv_indicator"
-                        android:layout_width="5dp"
-                        android:layout_height="5dp"/>
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"/>
 
                 </LinearLayout>
 
@@ -168,7 +168,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="CourseName"
-                        android:layout_marginRight="3dp"
+                        android:layout_marginRight="8dp"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
                         android:textSize="16dp"/>
