--- a/app/src/main/res/layout/activity_enrollreqitem.xml
+++ b/app/src/main/res/layout/activity_enrollreqitem.xml
@@ -19,138 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="EnrollId"
-                        android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_erenrollid"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="BatchId"
-                        android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_erbatchid"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:textColor="#000000"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="OrgId"
-                        android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_erorgnisationid"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:textColor="#000000"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Amount"
-                        android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                    <TextView
-                        android:id="@+id/tv_eramount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:textColor="#000000"
-                        android:layout_weight="1"
-                        android:textSize="16dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/tv_indicator"
-                        android:layout_width="5dp"
-                        android:layout_height="5dp"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.1dip"
-                android:layout_margin="3dp"
-                android:background="#7f7f7f"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,24 +31,156 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
+                    android:layout_weight="1.9">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="EnrollId"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/tv_erenrollid"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:textColor="#000000"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1.9">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="BatchId"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/tv_erbatchid"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:textColor="#000000"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1.9">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="OrgId"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/tv_erorgnisationid"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:textColor="#000000"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1.9">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="Amount"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/tv_eramount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:textColor="#000000"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="2dp"
+                    android:layout_weight="2.4">
+
+                    <TextView
+                        android:id="@+id/tv_indicator"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dip"
+                android:layout_margin="3dp"
+                android:background="#7f7f7f" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
                     android:layout_weight="2">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="CourseName"
-                        android:layout_marginRight="3dp"
-                        android:textColor="@color/green"
+                        android:layout_marginRight="5dp"
                         android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                        android:text="CourseName"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
 
                     <TextView
                         android:id="@+id/tv_ercoursename"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#000000"
                         android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                        android:textColor="#000000"
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
@@ -192,11 +193,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Req. Date"
                         android:layout_marginRight="2dp"
-                        android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                        android:text="Req. Date"
+                        android:textColor="@color/green"
+                        android:textSize="16dp" />
 
                     <TextView
                         android:id="@+id/tv_erreqdate"
@@ -204,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp"/>
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
@@ -218,10 +219,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="2dp"
+                        android:gravity="center_vertical"
                         android:text="End Date"
                         android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                        android:textSize="16dp" />
 
                     <TextView
                         android:id="@+id/tv_erenddate"
@@ -229,7 +230,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp"/>
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
